client/public/assets/styles.css
@font-face {
    font-family: 'Lucida Grande';
    src: url('fonts/LucidaGrande.woff2') format('woff2'),
        url('fonts/LucidaGrande.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Lucida Grande';
    src: url('fonts/LucidaGrande-Bold.woff2') format('woff2'),
        url('fonts/LucidaGrande-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}

html, body {
	font-family: 'Lucida Grande', sans-serif;
	background-color: white;
	letter-spacing: 1.25px;
	min-height: 100%;
}

body#auth {
	margin: 10% auto;
}

.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  line-height: 1.5;
}

#stats {
	background-color: white;
	box-shadow: 0 0 20px 0 rgba(0,0,0,0.10);
    border-radius: 20px 20px 0 0;
    padding: 10px 20px;
}

h2 {
	color: #45467B;
	font-weight: 700;
}

.main-color {
	color: #45467B;
}

.editor-input {
	border: 1px solid rgba(0,0,0,0.30);
	border-radius: 10px;
	padding: 10px 20px;
	min-width: 250px;
}

.editor-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  	font-size: 16px;
  	color: #BEBEBE;
}
.editor-input::-moz-placeholder { /* Firefox 19+ */
  	font-size: 16px;
  	color: #BEBEBE;
}
.editor-input:-ms-input-placeholder { /* IE 10+ */
  	font-size: 16px;
  	color: #BEBEBE;
}
.editor-input:-moz-placeholder { /* Firefox 18- */
  	font-size: 16px;
  	color: #BEBEBE;
}

.editor-btn {
	border-radius: 10px;
	border: dashed 1px #000;
	background-color: black;
	color: white;
	font-size: 18px;
	text-align: center;
	padding: 10px 20px;
	margin: 5px 5px;
	letter-spacing: 1.67px;
	cursor: pointer;
	transition: all 0.3s;
}

.editor-btn.big {
	min-width: 150px;
}

.editor-btn.small {
	font-size: 14px;
	padding: 5px 10px;
}

.editor-btn:hover {
	background-color: white;
	color: black;
}

.editor-btn.main {
	background-color: #45467B;
	color: white;
}

.editor-btn.main:hover {
	background-color: white;
	color: #45467B;
}

.editor-btn.white {
	background-color: white;
	color: black;
	margin: 0 20px;
}

.editor-btn.white:hover {
	background-color: black;
	color: white;
}

.editor-block {
	border: 1px dashed #454679;
	border-radius: 20px;
	background-color: white;
	padding: 10px;
	margin: 5px 0;
}

#third:before {
	content: "3";
	color: #45467B;
    font-size: 280px;
    font-weight: 900;
    height: 330px;
    letter-spacing: -16px;
    line-height: 330px;
    opacity: 0.1; 
    position: absolute;
    left: calc(50% - 75px);
}

#second:before {
	content: "2";
	color: #45467B;
    font-size: 280px;
    font-weight: 900;
    height: 330px;
    letter-spacing: -16px;
    line-height: 330px;
    opacity: 0.1; 
    position: absolute;
    left: calc(50% - 75px);
}

#first:before {
	content: "1";
    color: #45467B;
    font-size: 280px;
    font-weight: 900;
    height: 330px;
    letter-spacing: -16px;
    line-height: 330px;
    opacity: 0.1; 
    position: absolute;
    left: calc(50% - 75px);
}

.editor-block.square {
	min-width: 200px;
	min-height: 300px;
	font-size: 24px;
}

.progress { 
	height: 20px;
    position: relative;
    background: white;
    -moz-border-radius: 25px;
    -webkit-border-radius: 25px;
    border: 1px solid #454679;
    padding: 10px;
}

.progress > span {
    display: block;
    height: 100%;
    width: 10%;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    background-color: #454679;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
}

a,
a:hover,
a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

.navbar {
    padding: 15px 10px;
    background: #fff;
    margin-bottom: 40px;
    box-shadow: 0 0 20px 0 rgba(0,0,0,0.10);
    border-radius: 20px;
}

.navbar-btn {
    box-shadow: none;
    outline: none !important;
    border: none;
}

.line {
    width: 100%;
    height: 1px;
    border-bottom: 1px dashed #ddd;
    margin: 40px 0;
}

.wrapper {
    display: flex;
    width: 100%;
    align-items: stretch;
}

#sidebar {
    min-width: 250px;
    max-width: 250px;
    /* background: white; */
    color: black;
    /* box-shadow: 0 0 20px 0 rgba(0,0,0,0.10); */
    transition: all 0.3s;
}


#sidebar.active {
    margin-left: -250px;
}

#sidebar .sidebar-header {
    padding: 20px;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}


#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 15px 25px;
    font-size: 18px;
    display: block;
}


#sidebar ul li a:hover {
    color: white;
    background: #45467B;
}


#sidebar ul li.active>a,
a[aria-expanded="true"] {
    color: #fff;
    background: #6d7fcc;
}


a[data-toggle="collapse"] {
    position: relative;
}

/*.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}*/

#content {
    width: 100%;
    padding: 15px;
    min-height: 100vh;
    transition: all 0.3s;
}

.profile-email {
	font-size: 12px;
	color: grey;
	margin: 0;
}

@media (max-width: 768px) {
    #sidebar {
        margin-left: -250px;
    }



    #sidebar.active {
        margin-left: 0;
    }

    #sidebarCollapse span {
        display: none;
    }
    footer {
        display: none;
    }
}


.panel-danger {
    border-color: #ff3b30;
}

.panel-danger {
    border-color: #ebccd1;
}

.panel {
    margin-bottom: 20px;
    background-color: #fff;
    border-radius: 20px;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
    box-shadow: 0 1px 1px rgba(0,0,0,.05);

    border: 1px dashed #454679;
    border-radius: 20px;

}

.panel-campaign {
    margin-bottom: 20px;
    background-color: #fff;
    border-radius: 20px;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
    box-shadow: 0 1px 1px rgba(0,0,0,.05);

    border: 1px solid white;
    border-radius: 20px;
}
/* ... */

